# dailylanguagetutor

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  vocabulary.db
apps/: chat.py  dictionary.py  flashcard.py  news.py  roleplay.py
database/: __init__.py  database.py  models.py
utils/: cloud_clients.py  ollama_client.py
